# vlm-krakenx-daemon

./: .gitignore  CMakeLists.txt  CpuPackageTemp.cpp  CpuPackageTemp.h  KrakenXConfig.cpp  KrakenXConfig.h  LinearFunc.cpp  LinearFunc.h  README.md  main.cpp
pre-built-binary/: vlm-krakenx-daemon
